--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Playfair+Display&display=swap');
+
 
 .App {
     padding: 20px;
